<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">股票时机</string>
    <string name="action_settings">设置</string>
    <string name="home">首页</string>
    <string name="news">资讯</string>
	<string name="member">会员</string>
	<string name="no_data">无数据</string>
	<string name="no_stocks">无股票信息</string>
	<string name="no_news">无资讯</string>
    <string name="stocks_day_month">日月精选</string>
	<string name="stocks_day">每日精选</string>
	<string name="stocks_month">每月精选</string>
	<string name="stocks_month2">每月精选股票</string>
	<string name="latest">最新</string>
	<string name="opening">今开</string>
	<string name="peak">最高</string>
	<string name="increase">涨幅</string>
	<string name="settings">个人设置</string>
	<string name="update">检查更新</string>
	<string name="about">关于</string>
	<string name="log_out">退出</string>
	<string name="version_hint">当前版本号</string>
    <string name="newest_version">当前版本为最新版本</string>
	<string name="amount">总资产(元)</string>
	<string name="today_increase">今日收益(元)</string>
	<string name="total_increase">累计收益(元)</string>
	<string name="save_money">资产管理</string>
	<string name="purchase">产品申购</string>
	<string name="exchange_detail">交易动态</string>
	<string name="redeem">赎回</string>
	<string name="stock_hint">基本信息</string>
	<string name="stock_description">按1比4的比例配额炒股资金，收益全归你。例，投入10000元获得4万元的操作资金，预计收益为>8%x4万，大于3200的收益，资金赎回T+0.急需用钱时无后顾之忧</string>
	<string name="pre_benefit">预期收益</string>
	<string name="remain">剩余份数</string>
	<string name="onevalue">每份金额(元)</string>
	<string name="valid_days">期限(天)</string>
	<string name="rule">交易规则</string>
	<string name="contract">【合同】</string>
	<string name="hot_line">申购热线</string>
	<string name="account">交易账号</string>
	<string name="record_hint">开盘期间股票名称与代码隐藏，收盘之后显示</string>
	<string name="record">交易记录</string>
	<string name="redeem_cash">赎回金额</string>
	<string name="redeem_account">赎回账号</string>
	<string name="service_tel">客户电话</string>
	<string name="verify_password">会员密码</string>
	<string name="input_pw">请输入密码</string>
	<string name="login_hint">邮箱/手机号/用户名</string>
	<string name="login">登录</string>
	<string name="register_by_tel">手机快速注册</string>
	<string name="tel">手机号</string>
	<string name="user_name">用户名</string>
	<string name="input_user_name">用户名(设置后不可该改)</string>
	<string name="confirm_pw">确认密码</string>
    <string name="confirm_pw_fail">输入密码不一致</string>
	<string name="register">注册</string>
	<string name="subscription">订阅</string>
	<string name="subscription_center">订阅中心</string>
    <string name="buy_vip">购买VIP</string>
	<string name="not_access_server">网络请求失败</string>
	<string name="not_access_server2">网络请求失败，下拉涮新重试</string>
	<string name="reconnect">重试</string>
	<string name="subscribe_hint">请登录查看-个人账户中心进行订阅</string>
	<string name="confirm">确定</string>
	<string name="jg_stocks">机构买入</string>
	<string name="buy">购买</string>
	<string name="pay_hint">选择支付方式</string>
	<string name="zfbzf">支付宝支付</string>
	<string name="wxzf">微信支付</string>
	<string name="sjkh">手机开户</string>
	<string name="jx">精选</string>
	<string name="zx">资讯</string>
    <string name="zxzw">资讯详情</string>
	<string name="mncp">模拟操盘</string>
    <string name="market_info">大盘信息</string>
    <string name="market_preview">大盘观点</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_use">该功能暂未开放</string>
    <string name="title_activity_info">策略消息</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_analysts">分析策略</string>
    <string name="jubaoyiqi">聚宝一期</string>
    <string name="niuniuchaogu">牛牛炒股</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="title_activity_dpgd">大盘观点</string>
    <string name="title_activity_stock_minute">StockMinuteActivity</string>
    <string name="trade_volume">成交量</string>
    <string name="max_price">最高</string>
    <string name="trade_percent">换手率</string>
    <string name="min_price">最低</string>
    <string name="select_stocks">自选股</string>
    <string name="current_price">最新</string>
    <string name="increase_ratio">涨幅</string>
    <string name="increase_amount">涨跌</string>
    <string name="increase_speed">涨速</string>
    <string name="zs">总手</string>
    <string name="lb">量比</string>
    <string name="price_to_earning_ratio">市盈（动）</string>
    <string name="price_to_book_ratio">市净率</string>
    <string name="opening_price">开盘</string>
    <string name="closing_price">昨收</string>
    <string name="wb">委比</string>
    <string name="zf">振幅</string>
    <string name="circulation_market_value">流通市值</string>
    <string name="total_market_value">总市值</string>
    <string name="search_stock_hint">搜索股票代码/名称/简拼</string>
    <string name="average_price">均价</string>
    <string name="newest_price">最新</string>
    <string name="increase_percentage">涨幅</string>
    <string name="minute_trade_volumn">分时量</string>
    <string name="volume">量</string>
    <string name="pro_hint">专业版提供实时买卖信号</string>
    <string name="chakan">查看</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="title_activity_zxgedit">自选股编辑</string>
    <string name="zxg_edit">自选股编辑</string>
    <string name="save">保存</string>
    <string name="today_profit">今日收益</string>
    <string name="week_profit">本周收益</string>
    <string name="month_profit">本月收益</string>
    <string name="profit">收益</string>
    <string name="vip_detail">解锁星标*隐藏的内容，优先获得实时推送，获取B,S信号</string>
</resources>
