<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<ImageView android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="2dp"
	    android:src="@drawable/ic_action_cancel"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="20dp"
	    android:id="@+id/iv_cancel"/>
	
	<EditText android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="50dp"
	    android:layout_marginLeft="50dp"
	    android:layout_marginRight="50dp"
	    android:hint="@string/login_hint"
	    android:id="@+id/user"/>
	
	<EditText android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="30dp"
	    android:layout_marginLeft="50dp"
	    android:layout_marginRight="50dp"
	    android:hint="@string/input_pw"
	    android:inputType="textPassword"
	    android:id="@+id/pw"/>
	
	<Button android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="30dp"
	    android:layout_marginLeft="50dp"
	    android:layout_marginRight="50dp"
	    android:text="@string/login"
	    android:id="@+id/btn_login"/>
	
	<Button android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:text="@string/register_by_tel"
	    android:layout_marginTop="10dp"
	    android:layout_marginRight="10dp"
	    android:id="@+id/btn_reg"/>
</LinearLayout>
