<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="@dimen/select_list_head_height">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/line1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_alignParentBottom="true"
        android:id="@+id/line2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/line1"
        android:layout_above="@id/line2">
        <TextView
            android:layout_width="@dimen/zxg_entry_head_width"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:text="股票名称"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>

    <com.hengxuan.stock.widget.MyHScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:id="@+id/head_scroller">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/current_price"
                android:id="@+id/current"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/increase_ratio"
                android:id="@+id/increase_ratio"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/increase_amount"
                android:id="@+id/increase_amount"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/increase_speed"
                android:id="@+id/increase_speed"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zs"
                android:id="@+id/trade_volume"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/trade_percent"
                android:id="@+id/trade_percent"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lb"
                android:id="@+id/trade_ratio"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/price_to_earning_ratio"
                android:id="@+id/price_to_earning_ratio"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/price_to_book_ratio"
                android:id="@+id/price_to_book_ratio"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/opening_price"
                android:id="@+id/opening_price"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/closing_price"
                android:id="@+id/closing_price"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/max_price"
                android:id="@+id/max_price"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/min_price"
                android:id="@+id/min_price"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wb"
                android:id="@+id/wb"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zf"
                android:id="@+id/zf"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/circulation_market_value"
                android:id="@+id/circulation_market_value"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="@dimen/zxg_entry_item_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total_market_value"
                android:id="@+id/total_market_value"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@android:style/TextAppearance.Medium.Inverse"/>
        </LinearLayout>
    </com.hengxuan.stock.widget.MyHScrollView>
    </LinearLayout>
</RelativeLayout>