<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_gravity="center_horizontal"
        android:text="@string/buy_vip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/vip_detail"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:text="@string/zfbzf"
        android:id="@+id/zfb"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:text="@string/wxzf"
        android:id="@+id/wx"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:text="@android:string/cancel"
        android:id="@+id/cancel"/>
</LinearLayout>