<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffeeeeee">
    
	<RelativeLayout android:layout_width="match_parent"
	    android:layout_height="100dp"
	    android:background="@color/main1">
	    <LinearLayout android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:layout_centerInParent="true">
	    	<TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/pre_benefit"/>
	    	<TextView android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_gravity="center_horizontal"
				android:text=">8%"/>
	    </LinearLayout>
	</RelativeLayout>
	
	<RelativeLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@android:color/white">
	    <LinearLayout android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    	
	        <LinearLayout android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:gravity="center"
	            android:layout_weight="1">
	            <TextView android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/remain"/>
	            <TextView android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="1000"
	                android:layout_marginTop="8dp"/>
	        </LinearLayout>
	        
	        <LinearLayout android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_weight="1"
	            android:gravity="center">
	            <TextView android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/onevalue"/>
	            <TextView android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="10000"
	                android:layout_marginTop="8dp"/>
	        </LinearLayout>
	        
	        <LinearLayout android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_weight="1"
	            android:gravity="center">
	            <TextView android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/valid_days"/>
	            <TextView android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="1-30"
	                android:layout_marginTop="8dp"/>
	        </LinearLayout>
	        
	    </LinearLayout>
	</RelativeLayout>
	
	<View android:layout_width="match_parent"
	    android:layout_height="20dp"/>
	<RelativeLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@android:color/white">
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/rule"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/contract"
	        android:layout_alignParentRight="true"/>
	</RelativeLayout>
	
	<RelativeLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@android:color/white">
	    
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/hot_line"
	        android:id="@+id/hot_line"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/hot_line"
	        android:layout_marginLeft="40dp"
	        android:text="010-88888888"
	        android:id="@+id/tel"
	        />
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/tel"
	        android:layout_marginTop="4dp"
	        android:layout_alignStart="@id/tel"
	        android:text="QQ:---------"
	        android:id="@+id/qq"/>
	    
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/qq"
	        android:layout_alignStart="@id/hot_line"
	        android:text="@string/account"
	        android:layout_marginTop="10dp"
	        android:id="@+id/accout"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/accout"
	        android:layout_marginLeft="40dp"
	        android:text="-------------------"
	        android:layout_alignBaseline="@id/accout"/>
    </RelativeLayout>
</LinearLayout>
