<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <com.hengxuan.stock.widget.CircleViewPager android:layout_width="match_parent"
                                               android:layout_height="160dp"
                                               android:id="@+id/circleviewpager"></com.hengxuan.stock.widget.CircleViewPager>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@android:color/white"
                  android:orientation="horizontal"
                  android:padding="@dimen/widget_margin">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/stocks_day_month"
                  android:drawableTop="@drawable/home_menu1"
                  android:drawablePadding="@dimen/icon_menu_padding"
                  android:gravity="center"
                  android:id="@+id/menu1"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/jg_stocks"
                  android:drawableTop="@drawable/home_menu2"
                  android:drawablePadding="@dimen/icon_menu_padding"
                  android:gravity="center"
                  android:id="@+id/menu2"/>

	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_weight="1"
	        android:text="@string/market_preview"
	        android:drawableTop="@drawable/home_menu3"
	        android:drawablePadding="@dimen/icon_menu_padding"
	        android:id="@+id/menu3"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/mncp"
                  android:drawableTop="@drawable/home_menu4"
                  android:drawablePadding="@dimen/icon_menu_padding"
                  android:gravity="center"
                  android:id="@+id/menu4"/>
    </LinearLayout>

</LinearLayout>